# odoo-mcp-server

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/mcpserver/: __main__.py  config.py  deployment.py  odoo_mcp_server.py  tools.py
