[project]
name = "odoo-mcp-server"
version = "0.1.0"
description = "MCP Server for Odoo"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sameer Anwar", email = "gdrboy11@gmail.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "mcp-client", "odoo", "model-context-protocol", "openai", "odoo-mcp", "odoo-mcp-server"]
dependencies = [
    "mcp[cli]>=1.13.1",
    "pytz>=2025.2",
]

[project.scripts]
odoo-mcp-server = "src.mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
